// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Number interface testing getCountry() 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8,761,564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing getDecimalSeparator() 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "87&nbsp;661&nbsp;564.1234",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing getThousandSeparator() 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8,766,641,564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setCountry(country, setStateCallBack) 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8,761,564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setCountry(country, setStateCallBack) 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8,761,564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setDecimalSeparator(separator, setStateCallBack) 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "87&nbsp;661&nbsp;564,1234",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setDecimalSeparator(separator, setStateCallBack) 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "87&nbsp;661&nbsp;564.1234",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setOptions(setStateCallBack) 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8&nbsp;761&nbsp;564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setOptions(setStateCallBack) 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8,761,564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setThousandSeparator(separator,setStateCallBack) 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8&nbsp;766&nbsp;641&nbsp;564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number interface testing setThousandSeparator(separator,setStateCallBack) 2`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "8.766.641.564",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
